# eeboparser

./: .gitignore  1_parse_xml.py  2_adorn.sh  README.md  corpus.py  parse.py  pyproject.toml  requirements.txt  test.py
cleaning_lists/: single_word_variations.py  variations.txt
eeboparser/: clean_meta.py  locations.py  mongo.py  parse_xml.py  phrase_variations.py  single_word_variations.py  utils.py
java/: build.xml
java/morphadorner-data/: README.md  emeplaintext.properties  morphadornerlog.config
java/morphadorner-data/data/: eccoabbreviations.txt  eccomergedspellingpairs.tab  emdabbreviations.txt  emdmainabbreviations.txt  emeabbreviations.txt  ncfabbreviations.txt  ncflexicon.lex  ncfmergedspellingpairs.tab  nuposallowedpostags.txt  nuposinterpgrp.xml  standardspellings.txt
java/src/: AdornAString.java  AdornDocs.java  AdornDocsParallel.java  AdornFilesParallel.java  AdornString.java  Doc.java  MongoConnection.java  StringAdorn.java  Test.java
python/: clean_meta.py  mongo.py  parse_xml.py
python/cleaning_lists/: locations_blacklist.py  phrase_variations.py
scripts/: download_sample_dataset.sh
