[tool.poetry]
name = "eeboparser"
version = "0.1.0"
description = "Parse EEBO XML TCP files for metadata and text content"
authors = ["Arthur Koehl <avkoehl@ucdavis.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pymongo = "^3.11"
joblib = "^0.17.0"
pandas = "^1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
